# UI

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  compose.yaml  config.py  database.db  database1.db  docker-compose.yaml  docker-run.sh  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: containerize-dev.yml  containerize-on-tag.yml  python-publish-dev.yml  python-publish.yml
FreeTAKServer-UI/: cert_gen.py  config.py  example.db  package-lock.json  run.py
FreeTAKServer-UI/app/: __init__.py
FreeTAKServer-UI/app/base/: models.py  routes.py  util.py
FreeTAKServer-UI/app/base/templates/: base-site-rtl.html  base-site.html
FreeTAKServer-UI/app/base/templates/login/: login.html  register.html
FreeTAKServer-UI/app/base/templates/site_template/: navigation.html  scripts.html
FreeTAKServer-UI/app/home/: routes.py
FreeTAKServer-UI/app/home/templates/: MumbleWeb.html  about.html  configure.html  connect.html  index.html  mission.html  page-user.html  qr.html  ui-icons.html  users.html  webmap.html
app/: __init__.py
app/base/: forms.py  models.py  routes.py
app/base/templates/: base-site.html
app/base/templates/login/: login.html
app/base/templates/site_template/: footer.html  navigation.html  scripts.html  sidebar.html
app/home/: routes.py
app/home/templates/: about.html  configure.html  connect.html  index.html  mission.html  page-user.html  ui-icons.html  users.html  webmap.html
env/lib/: README.md
env1/lib/python3.6/: tarfile.py
support/: start-fts.sh  supervisord.conf
tests/: conftest.py
(+23 files in other folders)
