[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "freetakserver-ui"
version = "2.2"
description = "an optional UI for FreeTAKServer"
authors = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
readme= "README.md"
packages = [
    {include = "FreeTAKServer-UI"}
    ]

[tool.poetry.dependencies]
python="^3.11"
alembic="1.13.1"
blinker="1.7.0"
certifi="2024.2.2"
charset-normalizer="3.3.2"
click="8.1.7"
colorama="0.4.6"
dnspython="2.6.1"
email_validator="2.1.1"
eventlet="0.35.2"
Flask="3.0.2"
Flask-Cors="4.0.0"
Flask-Login="0.6.3"
Flask-Migrate="4.0.6"
Flask-SQLAlchemy="3.1.1"
Flask-WTF="1.2.1"
greenlet="3.0.3"
gunicorn="21.2.0"
idna="3.6"
itsdangerous="2.1.2"
Jinja2="3.1.3"
Mako="1.3.2"
MarkupSafe="2.1.5"
packaging="24.0"
python-decouple="3.8"
requests="2.31.0"
SQLAlchemy="2.0.29"
SQLAlchemy-Utils="0.41.1"
typing-extensions="4.10.0"
urllib3="2.2.1"
Werkzeug="3.0.1"
WTForms="2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
